# aligned_layer

./: .gitignore  .gitmodules  Makefile  docker-compose.yaml  go.mod  go.sum  network_params.yaml  telemetry-docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: build-and-test-go.yml  build-and-test-rust.yml  build-contracts.yml  foundry-gas-diff.yml  golangci-lint.yml  lint-contracts.yml  release.yml  send-proofs-docker.yml  test-merkle-tree.yml  test-risc-zero.yml  test-sp1.yml
aggregation_mode/: Cargo.toml  README.md  build.rs  programs_ids.json
aggregation_mode/abi/: AlignedLayerServiceManager.json  AlignedProofAggregationService.json
aggregation_mode/aggregation_programs/: .gitignore  Cargo.toml
aggregation_mode/aggregation_programs/risc0/: Cargo.toml
aggregation_mode/aggregation_programs/risc0/src/: chunk_aggregator_main.rs  lib.rs  main.rs  user_proofs_aggregator_main.rs
aggregation_mode/aggregation_programs/sp1/: Cargo.toml
aggregation_mode/aggregation_programs/sp1/src/: chunk_aggregator_main.rs  lib.rs  main.rs  user_proofs_aggregator_main.rs
aggregation_mode/scripts/: build_programs.sh
aggregation_mode/src/: lib.rs  main.rs
aggregation_mode/src/aggregators/: lib.rs  mod.rs  risc0_aggregator.rs  sp1_aggregator.rs
aggregation_mode/src/backend/: config.rs  fetcher.rs  merkle_tree.rs  mod.rs  s3.rs  types.rs
aggregator/pkg/: server.go  telemetry.go
alerts/: .env.example  aggregation_mode_alerts.sh  balance_alerts.sh  contract_alerts.sh  sender_with_alert.sh  telegram.sh
batcher/aligned/: Cargo.toml  generate_proof_and_send.sh  get_proof_test_files.sh  send_burst_with_random_address.sh  send_infinite_tasks.sh  send_proof_with_random_address.sh
batcher/aligned-batcher/: Cargo.toml
batcher/aligned-sdk/: Cargo.toml
batcher/aligned-task-sender/: README.md
common/: proving_systems.go
config-files/: anvil.proof-aggregator.ecdsa.key.json  config-aggregator-docker.yaml  config-aggregator-ethereum-package.yaml  config-aggregator.yaml  config-batcher-docker.yaml  config-batcher-ethereum-package.yaml  config-batcher.yaml  config-operator-1-ethereum-package.yaml  config-operator-1.yaml  config-operator-2.yaml  config-operator-3.yaml  config-operator-docker.yaml  config-proof-aggregator-ethereum-package.yaml  config-proof-aggregator-mock-ethereum-package.yaml  config-proof-aggregator-mock.yaml  config-proof-aggregator.yaml  config.yaml  proof-aggregator.last_aggregated_block.json
contracts/: foundry.toml  remappings.txt
contracts/deployments/: 31337.json
contracts/eigenlayer_contracts/: README.md
contracts/scripts/: .env.holesky  .env.mainnet  .env.mainnet.staging  .env.stage  deploy_proof_aggregator.sh  upgrade_proof_aggregator.sh
core/chainio/: avs_reader.go  avs_subscriber.go  retryable.go
core/config/: eigen_layer_deployment.go
crates/: Cargo.toml
crates/batcher/: Cargo.toml  build.rs
crates/batcher/go_verifiers_lib/: go.mod  go.sum  verifier.go
crates/batcher/src/: connection.rs  lib.rs  main.rs
crates/batcher/src/circom/: verifier.rs
crates/batcher/src/ffi/: circom_ffi.rs  gnark_ffi.rs  list_ref.rs  mod.rs
crates/batcher/src/gnark/: mod.rs
crates/batcher/src/sp1/: mod.rs
crates/batcher/src/types/: batch_state.rs
crates/batcher/src/zk_utils/: mod.rs
crates/cli/: Cargo.toml  generate_proof_and_send.sh  get_proof_test_files.sh  send_burst_tasks.sh  send_infinite_tasks.sh  send_proof_with_random_address.sh
crates/sdk/: Cargo.toml
crates/sdk/src/aggregation_layer/: mod.rs
crates/sdk/src/common/: errors.rs  types.rs
crates/sdk/src/communication/: batch.rs  protocol.rs
crates/sdk/src/eth/: batcher_payment_service.rs  mod.rs
crates/sdk/src/verification_layer/: mod.rs
crates/task-sender/: Cargo.toml
docker/: README.md  aggregator.Dockerfile  aligned_base.Dockerfile  batcher.Dockerfile  eigenlayer-cli.Dockerfile  foundry.Dockerfile
docs/: SUMMARY.md
docs/0_internal/: 2_deploy_contracts.md  ethereum_package.md
docs/1_introduction/: 0_about_aligned.md  1_try_aligned.md  2_use_cases.md  3_faq.md  4_why_zk.md
docs/2_architecture/: 0_supported_verifiers.md  1_proof_verification_layer.md  2_aggregation_mode.md  3_raas_platform.md
docs/3_guides/: 0_submitting_proofs.md  1.2_SDK_api_reference.md  1.3_SDK_api_reference_aggregation.md  1_SDK_how_to.md  2_build_your_first_aligned_application.md  3.1_aggregation_mode.md  3.2_generate_gnark_proof.md  3_validating_public_input.md  4_generating_proofs.md  6_setup_aligned.md  7_contract_addresses.md  8_submitting_batch_without_batcher.md  9_aligned_cli.md  setup_holesky.md
docs/operator_guides/: 0_running_an_operator.md  1_operator_FAQ.md  2_troubleshooting.md
examples/l2/: .env.devnet  .env.holesky  .gitignore  Cargo.toml  Makefile  README.md
examples/l2/cmd/: Cargo.toml  prove_state_transition.rs  update_state_on_chain.rs  utils.rs
examples/l2/contracts/: .env.devnet  .env.holesky
examples/l2/contracts/script/: StateTransitionDeployer.s.sol
examples/l2/contracts/scripts/: deploy.sh
examples/l2/contracts/src/: StateTransition.sol
examples/l2/crates/l2/: Cargo.toml  build.rs
examples/l2/crates/l2/abi/: StateTransition.json
examples/l2/crates/l2/src/: aligned.rs  config.rs  db.rs  eth.rs  l2.rs  lib.rs  prover.rs
examples/l2/crates/l2/zkvm_programs/: Cargo.toml
examples/l2/crates/l2/zkvm_programs/sp1/: Cargo.toml
examples/l2/crates/l2/zkvm_programs/sp1/src/: lib.rs  main.rs
examples/l2/crates/types/: Cargo.toml
examples/l2/crates/types/src/: lib.rs
examples/validating-public-input/: Makefile  README.md
examples/verify/: README.md  encode_verification_data.py  verify.py
examples/zkquiz/: Makefile
explorer/: .env.dev  .env.example  mix.exs  start.sh
infra/aggregation_mode/: README.md  aggregation_mode.service  aggregation_mode.sh  aggregation_mode.timer  config-proof-aggregator.template.yaml  (+4 more)
scripts/: fund_operator_devnet.sh  mint_mock_token.sh  user_fund_payment_service_devnet.sh
scripts/test_files/sp1/no_public_inputs/script/: Cargo.toml
scripts/test_files/sp1/no_public_inputs/script/src/: main.rs
(+203 files in other folders)
