[package]
name = "proof_aggregator"
version = "0.1.0"
edition = "2021"


[dependencies]
sp1-sdk = "4.1.3"
sp1_aggregation_program = { path = "./aggregation_programs/sp1/" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
alloy = { version = "0.11", features = ["default", "signer-keystore", "kzg"] }
c-kzg = "1.0.3"
bincode = "1.3.3"
tokio = { version = "1", features = ["time"]}
sha3 = "0.10.8"
reqwest = { version = "0.12" }
ciborium = "=0.2.2"
# Necessary for the VerificationData type
aligned-sdk = { path = "../batcher/aligned-sdk/" }

[build-dependencies]
sp1-build = { version = "4.1.3" } 

[profile.release]
opt-level = 3

[features]
prove = []

