[package]
name = "proof_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
alloy = { version = "0.15", features = ["default", "signer-keystore", "kzg"] }
c-kzg = "2.1.1"
bincode = "1.3.3"
tokio = { version = "1", features = ["time"]}
sha3 = "0.10.8"
reqwest = { version = "0.12" }
ciborium = "=0.2.2"
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "5f8f2cfcc8a1a22f77e8dff2d581f1166eefb80b", features = ["serde"]}
rayon = "1.10.0"
# Necessary for the VerificationData type
aligned-sdk = { path = "../crates/sdk/" }
# zkvms
sp1-sdk = "5.0.0"
sp1_aggregation_program = { path = "./aggregation_programs/sp1" }
risc0-zkvm = { version = "2.2.0" }
risc0_aggregation_program = { path = "./aggregation_programs/risc0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum/", tag = "v2.2.2" }

[build-dependencies]
sp1-build = { version = "5.0.0" }
risc0-build = { version = "2.2.0" }

[package.metadata.risc0]
# Tell risc0 build to find method in ./aggregation_programs/risc0 package
methods = ["./aggregation_programs/risc0"]

[profile.release]
opt-level = 3

[features]
default = []
prove = []
gpu = ["risc0-zkvm/cuda"]

[[bin]]
name = "proof_aggregator_cpu"
path = "./src/main.rs"
required-features = ["prove"]

[[bin]]
name = "proof_aggregator_gpu"
path = "./src/main.rs"
required-features = ["prove", "gpu"]

[[bin]]
name = "proof_aggregator_dev"
path = "./src/main.rs"

[[bin]]
name = "write_program_image_id_vk_hash"
path = "./bin/write_program_image_id_vk_hash.rs"
