[package]
name = "risc0_aggregation_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0.203" }
serde_json = "1.0.117"
# Unstable feature is necessary for tiny-keccak patch, see: https://dev.risczero.com/api/zkvm/precompiles#stability
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag="v2.0.0", default-features = false, features = ["unstable", "std"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[lib]
path = "./src/lib.rs"

[[bin]]
name = "risc0_aggregator_program"
path = "./src/main.rs"
