[package]
name = "sp1_aggregation_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sp1-zkvm = { version = "4.1.3", features = ["verify"] }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "sha2-v0.10.8-patch-v1" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "sha3-v0.10.8-patch-v1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[lib]
path = "./src/lib.rs"

[[bin]]
name = "sp1_aggregator_program"
path = "./src/main.rs"
