[package]
name = "l2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
types = { workspace = true }
lambdaworks-crypto = { workspace = true }
primitive-types = { workspace = true}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
rand = "0.8"
sp1-sdk = "4.1.7"
sp1_state_transition_program = { path = "./zkvm_programs/sp1/" }
aligned-sdk = { path = "../../../../batcher/aligned-sdk" }
bincode = "1.3.3"
futures-util = "0.3"
tokio = "1.44"
alloy = { version = "0.14", features = ["full", "signer-keystore", "providers"] }
dotenv = "0.15"

[[bin]]
name = "write_program_id"
path = "./zkvm_programs/bin/write_program_ids.rs"

[build-dependencies]
sp1-build = { version = "4.1.7" } 

[profile.release]
opt-level = 3
