[workspace]
[package]
version = "0.1.0"
name = "no_public_input_proof_generator-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v5.0.0" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v5.0.0"  }
