[package]
name = "sp1_state_transition_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sp1-zkvm = { version = "5.0.0", features = ["verify"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
primitive-types = { version = "0.12.0", features = ["serde"] }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "5f8f2cfcc8a1a22f77e8dff2d581f1166eefb80b", features = ["serde"]}
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "sha3-v0.10.8-patch-v1" }
types = { workspace = true }

[lib]
path = "./src/lib.rs"
